# AntiqueTools

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/include/: utils.h
tools/scripts/: build.py
